# EDFBrowser

./: CMakeLists.txt  README.txt  Readme  Readme SEVI  banned.h  createGraphs.cpp  createGraphs.h  edfbrowser.pro  graphs.py  hilbertDock.cpp  hilbertDock.h  import_gyrodata.cpp  import_gyrodata.h  mainwindow.cpp  mainwindow.h  mainwindow_constr.cpp  qrc_images.cpp  signal_chooser.cpp  spectrum_dock.cpp  startGyroAnalysis.cpp  startGyroAnalysis.h  sync_manager.cpp  sync_manager.h  version.txt  videoplayer.cpp  viewcurve.cpp  viewcurve.h
