cmake_minimum_required(VERSION 3.15)
#set(CMAKE_TOOLCHAIN_FILE /Users/Sevi_Pro/Desktop/seviEDFbrow/edfbrowser_170_source/CMAKE_TOOLCHAIN_FILE.cmake)
project(EDFbrowser_master)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_AUTOMOC ON)

set(CMAKE_AUTOUIC ON)

include_directories(.)
include_directories(third_party/fidlib)
include_directories(third_party/kiss_fft)
include_directories(SYSTEM ./lib)
include_directories(./usr/bin/)

find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5PrintSupport REQUIRED)

add_executable(EDFbrowser-master
        images.qrc
        third_party/fidlib/fidlib.c
        third_party/fidlib/fidlib.h
        third_party/fidlib/fidmkf.h
        third_party/fidlib/fidrf_cmdlist.h
        third_party/kiss_fft/_kiss_fft_guts.h
        third_party/kiss_fft/kiss_fft.c
        third_party/kiss_fft/kiss_fft.h
        third_party/kiss_fft/kiss_fftr.c
        third_party/kiss_fft/kiss_fftr.h
        about_dialog.cpp
        about_dialog.h
        active_file_chooser.cpp
        active_file_chooser.h
        adjustfiltersettings.cpp
        adjustfiltersettings.h
        annotations_dock.cpp
        annotations_dock.h
        annotlist_filter_dialog.cpp
        annotlist_filter_dialog.h
        ascii2edf.cpp
        ascii2edf.h
        ascii_export.cpp
        ascii_export.h
        averager_curve_wnd.cpp
        averager_curve_wnd.h
        averager_dialog.cpp
        averager_dialog.h
        bdf2edf.cpp
        bdf2edf.h
        bdf_triggers.cpp
        bdf_triggers.h
        bi9800.cpp
        bi9800.h
        biosemi2bdfplus.cpp
        biosemi2bdfplus.h
        biox2edf.cpp
        biox2edf.h
        cdsa_dialog.cpp
        cdsa_dialog.h
        cdsa_dock.cpp
        cdsa_dock.h
        check_edf_file.cpp
        check_edf_file.h
        check_for_updates.cpp
        check_for_updates.h
        colordialog.cpp
        colordialog.h
        date_time_stamp_parser.c
        date_time_stamp_parser.h
        ecg_export.cpp
        ecg_export.h
        ecg_filter.c
        ecg_filter.h
        ecg_statistics.c
        ecg_statistics.h
        edf_annot_list.c
        edf_annot_list.h
        edf_annotations.cpp
        edf_annotations.h
        edf_compat.cpp
        edf_compat.h
        edf_helper.c
        edf_helper.h
        edflib.c
        edflib.h
        edfplusd_cnv.cpp
        edfplusd_cnv.h
        edit_annotation_dock.cpp
        edit_annotation_dock.h
        edit_predefined_mtg.cpp
        edit_predefined_mtg.h
        emsa2edf.cpp
        emsa2edf.h
        export_annotations.cpp
        export_annotations.h
        export_filtered_signals.cpp
        export_filtered_signals.h
        fft_wrap.c
        fft_wrap.h
        filter.c
        filter.h
        filter_dialog.cpp
        filter_dialog.h
        filtercurve.cpp
        filtercurve.h
        filteredblockread.cpp
        filteredblockread.h
        fino2edf.cpp
        fino2edf.h
        fir_filter.c
        fir_filter.h
        fir_filter_dialog.cpp
        fir_filter_dialog.h
        flywheel.cpp
        flywheel.h
        fma_ecg2edf.cpp
        fma_ecg2edf.h
        global.h
        gpl.txt
        header_editor.cpp
        header_editor.h
        hrv_dock.cpp
        hrv_dock.h
        hypnogram_dialog.cpp
        hypnogram_dialog.h
        hypnogram_dock.cpp
        hypnogram_dock.h
        images.qrc
        import_annotations.cpp
        import_annotations.h
        ishne2edf.cpp
        ishne2edf.h
        jump_dialog.cpp
        jump_dialog.h
        LICENSE
        load_montage_dialog.cpp
        load_montage_dialog.h
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow_constr.cpp
        manscan2edf.cpp
        manscan2edf.h
        mit2edf.cpp
        mit2edf.h
        mortara2edf.cpp
        mortara2edf.h
        nexfin2edf.cpp
        nexfin2edf.h
        nk2edf.cpp
        nk2edf.h
        options_dialog.cpp
        options_dialog.h
        pagetime_dialog.cpp
        pagetime_dialog.h
        plif_ecg_subtract_filter.c
        plif_ecg_subtract_filter.h
        plif_ecg_subtract_filter_dialog.cpp
        plif_ecg_subtract_filter_dialog.h
        popup_save_cancelwindow.cpp
        popup_save_cancelwindow.h
        print_to_bdf.cpp
        print_to_bdf.h
        print_to_edf.cpp
        print_to_edf.h
        pt_qrs.c
        pt_qrs.h
        ravg_filter.c
        ravg_filter.h
        raw2edf.cpp
        raw2edf.h
        read_write_settings.cpp
        reduce_signals.cpp
        reduce_signals.h
        run_qrs_detector.cpp
        run_qrs_detector.h
        save_annots.cpp
        save_annots.h
        save_montage_dialog.cpp
        save_montage_dialog.h
        scp_ecg2edf.cpp
        scp_ecg2edf.h
        show_actual_montage_dialog.cpp
        show_actual_montage_dialog.h
        show_edf_hdr.cpp
        show_edf_hdr.h
        signal_chooser.cpp
        signal_chooser.h
        signalcurve.cpp
        signalcurve.h
        signals_dialog.cpp
        signals_dialog.h
        special_button.cpp
        special_button.h
        spectrum_dock.cpp
        spectrum_dock.h
        spectrumanalyzer.cpp
        spectrumanalyzer.h
        spike_filter.c
        spike_filter.h
        spike_filter_dialog.cpp
        spike_filter_dialog.h
        statistics_dialog.cpp
        statistics_dialog.h
        unisens2edf.cpp
        unisens2edf.h
        utc_date_time.c
        utc_date_time.h
        utils.c
        utils.h
        videoplayer.cpp
        view_montage_dialog.cpp
        view_montage_dialog.h
        viewbuf.cpp
        viewcurve.cpp
        viewcurve.h
        wav2edf.cpp
        wav2edf.h
        xml.c
        xml.h
        z_ratio_filter.c
        z_ratio_filter.h
        z_score_dialog.cpp
        z_score_dialog.h import_gyrodata.cpp import_gyrodata.h startGyroAnalysis.cpp startGyroAnalysis.h sync_manager.cpp sync_manager.h createGraphs.cpp createGraphs.h)

target_link_libraries(EDFbrowser-master Qt5::Core Qt5::Widgets Qt5::Network Qt5::Gui Qt5::PrintSupport)
